--- a/package.json
+++ b/package.json
@@ -20,9 +20,18 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "assert": "^2.1.0",
+    "buffer": "^6.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "url": "^0.11.4",
+    "util": "^0.12.5"
   }
 }
