--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@sherrylinks/sdk": "^2.22.20-beta.1",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "viem": "^2.31.2",
+    "wagmi": "^2.15.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
